dataset1235/2025-2/805158916/users/2889758250/executions/71079933_2416501300.log
== RUN (2025-08-25 14:27:31)
-- CODE: 
print("*****")
print("***")
  print("*")
print("*")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 3
    print("*")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 3
    print("*")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:30:05)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:30:00)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:20:54)
-- CODE: 
print("")
print("")
  print("")
print("")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 3
    print("")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 3
    print("")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
